--- a/project-triton.html
+++ b/project-triton.html
@@ -178,48 +178,52 @@
     <img class="lightbox-img" alt="">
   </div>
 
-  <script>
-    (function () {
-      const box = document.getElementById("lightbox");
-      const boxImg = box.querySelector(".lightbox-img");
-      const closeBtn = box.querySelector(".lightbox-close");
+ <script>
+(function () {
+  const box = document.getElementById("lightbox");
+  if (!box) return;
 
-      function openLightbox(src, alt) {
-        boxImg.src = src;
-        boxImg.alt = alt || "";
-        box.classList.add("is-open");
-        box.setAttribute("aria-hidden", "false");
-        document.body.style.overflow = "hidden";
-      }
+  const boxImg = box.querySelector(".lightbox-img");
+  const closeBtn = box.querySelector(".lightbox-close");
 
-      function closeLightbox() {
-        box.classList.remove("is-open");
-        box.setAttribute("aria-hidden", "true");
-        boxImg.src = "";
-        document.body.style.overflow = "";
-      }
+  function openLightbox(src, alt) {
+    boxImg.src = src;
+    boxImg.alt = alt || "";
+    box.classList.add("is-open");
+    box.setAttribute("aria-hidden", "false");
+    document.body.style.overflow = "hidden";
+  }
 
-      document.addEventListener("click", (e) => {
-        const img = e.target.closest("img.project-image, img.project-hero-image");
-        if (!img) return;
+  function closeLightbox() {
+    box.classList.remove("is-open");
+    box.setAttribute("aria-hidden", "true");
+    boxImg.src = "";
+    boxImg.alt = "";
+    document.body.style.overflow = "";
+  }
 
-        // Only lightbox images you mark as zoomable
-        if (!img.classList.contains("zoomable")) return;
+  document.addEventListener("click", (e) => {
+    const img = e.target.closest("img.zoomable");
+    if (!img) return;
+    e.preventDefault();
 
-        e.preventDefault();
-        openLightbox(img.src, img.alt);
-      });
+    // Use the resolved URL so GitHub Pages behaves
+    openLightbox(img.src, img.alt);
+  });
 
-      closeBtn.addEventListener("click", closeLightbox);
-      box.addEventListener("click", (e) => {
-        if (e.target === box) closeLightbox();
-      });
+  closeBtn.addEventListener("click", closeLightbox);
 
-      document.addEventListener("keydown", (e) => {
-        if (e.key === "Escape") closeLightbox();
-      });
-    })();
-  </script>
+  // Click backdrop to close (but not the image itself)
+  box.addEventListener("click", (e) => {
+    if (e.target === box) closeLightbox();
+  });
+
+  document.addEventListener("keydown", (e) => {
+    if (e.key === "Escape") closeLightbox();
+  });
+})();
+</script>
+
 
 </body>
 </html>
