--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header class="site-header">
     <div class="container header-inner">
       <a href="#top" class="site-logo" aria-label="Home">
-        <span class="monogram" aria-hidden="true">JM</span>
-      </a>
+  <span class="wordmark">Joshua Martinez</span>
+</a>
 
       <nav class="site-nav" aria-label="Primary">
         <a href="#projects">Projects</a>
